external-crates/move/crates/move-compiler/tests/move_2024/typing/struct_match_ambiguous_invalid.move
module 0x42::m {
    public struct S<phantom T> { x: u64 } has drop;

    fun t(): u64{
        let s = S { x: 0 };
        match (s) {
            _ => 10
        }
    }
}
